--- a/JobApplyTracker/package.json
+++ b/JobApplyTracker/package.json
@@ -18,12 +18,12 @@
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "express": "^4.19.2",
-    "express-fileupload": "^1.5.1",
     "express-validator": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.5.2",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.4",
+    "stream": "^0.0.3",
     "streamifier": "^0.1.1"
   }
 }
